Indexing bug, use full editor on mobile, better gallery css

--- a/theme/image-editor/button.less
+++ b/theme/image-editor/button.less
@@ -10,6 +10,7 @@
     color: var(--sidebar-icon-active-color);
 
     cursor: pointer;
+    user-select: none;
 }
 
 .image-editor-button.toggle, .image-editor-button.disabled {
